# django-rest-tutorial

./: .gitignore  .pre-commit-config.yaml  .skjoldignore  pyproject.toml
django_rest_tutorial/: manage.py
django_rest_tutorial/django_rest_tutorial/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
django_rest_tutorial/snippets/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
django_rest_tutorial/snippets/migrations/: 0001_initial.py  __init__.py
tests/: __init__.py
